# farm_robot

./: README.md
farm_bot_vision/: package.xml  setup.cfg  setup.py
farm_bot_vision/farm_bot_vision/: control_mode.py  crop_camera.py  crop_detector.py  crop_navigator.py  lidar_node.py  navigation_camera.py  receiver_node.py  serial_communication.py  ultrasonic_node.py
farm_bot_vision/farm_bot_vision/config/: nav2_params.yaml  rtabmap_params.yaml  tf_config.yaml
farm_bot_vision/launch/: navigation_autonomous.launch.py  vision_launch.py
